testData/src/error/JavaExample.java
/*
 * ©2009-2018 南京擎盾信息科技有限公司 All rights reserved.
 */
package error;

class JavaExample {

  public void test() {
    System.out.println(1);
  }
}

